--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.26",
     "next": "16.0.10",
+    "particles-bg": "^2.5.5",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
